# cidadao.ai-backend

./: .editorconfig  .env.chat.example  .env.example  .env.hf  .env.production  .env.railway  .env.supabase.example  .git-commit-template  .git-trigger-rebuild  .gitignore  .hfignore  .huggingface_restart  .huggingface_status.md  .huggingface_trigger  .pre-commit-config.yaml  .railway-deploy-trigger  AGENTS_INVENTORY.md  AGENTS_README.md  API_DATA_STRUCTURES.md  API_VERSIONING_STRATEGY.md  ARCHITECTURE.md  BACKUP_POLICY.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLAUDE_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_AUDIT_SUMMARY_2025_11_17.md  Dockerfile  Dockerfile.hf  EMERGENCY_SOLUTION.md  ENTERPRISE_IMPROVEMENTS.md  FIX_ID_TYPE.sql  FRONTEND_CHAT_INTEGRATION.md  FRONTEND_STABLE_INTEGRATION.md  GITHUB_PAGES_DEPLOY.md  HUGGINGFACE_DEPLOYMENT.md  HUGGINGFACE_SUPABASE_FIX.md  LICENSE  (+76 more)
.githooks/: pre-push
.github/: SECURITY.md
.github/workflows/: README.md  basic-checks.yml  ci-cd.yml  ci.yml  dependencies.yml  deploy-docs.yml  deploy.yml  docs-deploy.yml  readme-sync.yml  validate-docs.yml  validate-documentation.yml
.railway/: config.json
alembic/: README  env.py
alembic/versions/: 002_add_entity_graph_tables.py  003_add_performance_indexes.py  004_add_investigation_metadata.py  005_add_api_key_tables.py  006_add_ip_whitelist_table.py  007_add_performance_indexes.py  20251020_1610_add_investigation_tracking_fields.py  20251020_1610_merge_heads.py  20251023_1247_add_transparency_coverage_snapshots_.py  20251117_0951_create_investigations_table.py  20260224_1400_add_chat_and_academy_tables.py
apps/: README.md  api_app.py.backup  gradio_app.py  gradio_spaces.py  streamlit_app.py
config/: database_optimization.yaml
config/deployment/: Procfile
config/docker/: Dockerfile  Dockerfile.hf
deploy/: Dockerfile.workers
deployment/: Dockerfile.ml  Dockerfile.web  Dockerfile.worker  OBSERVABILITY.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  observability.sh  requirements-prod.txt
deployment/alertmanager/: alertmanager.yml
deployment/cloud/: railway.json  render.yaml
deployment/huggingface/: README.md  app.py  requirements.txt
deployment/kubernetes/: api.yaml  namespace.yaml  postgres.yaml  redis.yaml  workers.yaml
deployment/loki/: loki-config.yml
deployment/prometheus/: prometheus.yml
deployment/promtail/: promtail-config.yml
docs/: .github-pages-config.js  01-INDEX.md  02-README.md  24-7-AUTO-INVESTIGATION-SYSTEM.md  ANALISE_TECNICA_COMPLETA_2025_10_22.md  API_ENDPOINTS_MAP.md  CELERY_DATABASE_INVESTIGATION_FIX_2025_10_23.md  CHAT_API_DOCUMENTATION.md  CODE_DUPLICATION_ANALYSIS.md  CONNECTION_POOLING.md  CURRENT_STATE_2025-10-16.md  CURSOR_PAGINATION_IMPLEMENTATION.md  DEPLOY.md  DEPLOYMENT.md  FINAL_API_STATUS_2025_11_14.md  FRONTEND_CHATBOT_PROMPT.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_INTEGRATION_PLAN.md  IMPLEMENTATION_SUMMARY_2025_09_16.md  INDEX.md  INDICE_CHAT_APIS.md  MIGRATION-TO-RAILWAY-RENDER.md  MODULARIZATION_REPORT.md  MULTI_API_INTEGRATION.md  NEXT_STEPS_2025_09_16.md  PERFORMANCE_OPTIMIZATION.md  PUSH_NOTIFICATIONS_FUTURE_IDEA.md  QUICK_START_API.md  RAILWAY_CONFIG.md  RAILWAY_CONFIGURAR_VARIAVEIS_DASHBOARD.md  RAILWAY_NEXT_STEPS.md  RAILWAY_POSTGRESQL_SETUP.md  README.md  README_main.md  REAL_IMPLEMENTATION_STATUS.md  REDIS_CACHE_IMPLEMENTATION.md  RESPOSTA_CHAT_APIS.md  STATUS_2025_10_13.md  SUPABASE_INTEGRATION.md  SUPABASE_QUICK_START.md  (+29 more)
docs-conservative-backup-20250723-224308/: index-broken.html  index.html  sitemap.xml
docs/adr/: 004-conversation-persistence.md
docs/agents/: 00-CHANGELOG-2025-11-21.md  01-README.md  02-DEODORO-base-framework.md  04-ANITA-pattern-analysis-95pct.md  05-OXOSSI-data-hunting-94pct.md  07-AYRTON-SENNA-semantic-routing-92pct.md  09-OSCAR-NIEMEYER-data-aggregation-89pct.md  10-MACHADO-textual-analysis-88pct.md  11-BONIFACIO-legal-analysis-88pct.md  12-MARIA-QUITERIA-security-audit-87pct.md  13-ABAPORU-master-orchestration-86pct.md  14-NANA-memory-management-85pct.md  15-DRUMMOND-communication-83pct.md  16-CEUCI-etl-predictive-83pct.md  17-OBALUAIE-corruption-detection-81pct.md  18-DANDARA-social-equity-86pct.md  19-MONTEIRO-LOBATO-kids-programming-95pct.md  20-TARSILA-kids-design-95pct.md  21-BO-BARDI-frontend-mentor-90pct.md  22-SANTOS-DUMONT-backend-educator-90pct.md  AGENT_INVENTORY_2025_10_24.md  INDEX.md  INVENTORY.md  OXOSSI.md  OXOSSI_ANALYSIS_2025_10_25.md  README.md  abaporu.md  anita.md  ayrton_senna.md  bonifacio.md  ceuci.md  dandara.md  drummond.md  lampiao.md  machado.md  maria_quiteria.md  monteiro_lobato.md  nana.md  obaluaie.md  oscar_niemeyer.md  (+7 more)
documentation/: robots.txt
examples/: chat_dados_gov_demo.py  frontend_integration.tsx
huggingface_model/: README.md  upload_to_hub.py
k8s/: deployment.yaml
monitoring/: FEDERAL_APIS_DASHBOARD.md  README.md  manage-monitoring.sh  test-dashboard.sh
prometheus/: prometheus.yml
reports/: frontend_readiness_report.json
requirements/: README.md  base.txt  dev.txt  hf.txt  production.txt
scripts/: README.md  analyze_todos.py  apply_migration_railway.py  auth_system_analysis.py  clean_and_restore_docs.py  clean_migrated_files.py  commit_plan_3days.sh  create_agent_docs.py  deploy-free.sh  deploy.sh  deploy_monitoring.sh  deploy_to_hf.sh  diagnose_railway_env.py  fix_broken_docs.py  fix_broken_simple.py  fix_datetime_deprecation.py  fix_frontmatter.py  fix_integration_test_assertions.py  fix_integration_tests.py  fix_yaml_frontmatter.py  generate_secrets.py  migrate_config_classes.py  migrate_docs.py  migrate_pydantic_v2.py  optimize_database.py  railway_configure_database.sh  railway_configure_grafana.sh  replace_json_imports.py  run_migrations.py  run_railway_migration.sh  run_security_tests.py  run_tests.py  setup_database.sql  setup_git_hooks.sh  setup_vault.sh  sync_readme.py  test_supabase_connection.py  test_supabase_rest.py  update_hf_monitoring.sh  upload_dashboards_to_grafana_cloud.py  (+3 more)
src/: __init__.py
static/: monitoring.html
tests/: README_TESTS.md  conftest.py
(+1252 files in other folders)
